chdir() and write() errors are not handled in jpackage

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • internal
    • Affects Version/s: internal
    • Component/s: tools
    • generic
    • generic

      In libapplauncher chdir() is called in LinuxPlatform::SetCurrentDirectory() and PosixPlatform::SetCurrentDirectory(), write() is called in PosixProcess::SetInput(). Return code is ignored currently.
      Launcher should exit with an error if such calls were not successful.

            Assignee:
            Andy Herrick (Inactive)
            Reporter:
            Dmitry Chuyko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: