8228402: chdir() and write() errors are not handled in jpackage

Reviewed-by: almatvee