src/jdk.jpackage/linux/native/libapplauncher/LinuxPlatform.h
@@ -56,7 +56,6 @@ public:
     virtual TCHAR* ConvertFileSystemStringToString(
             TCHAR* Source, bool &release);
 
-    virtual void SetCurrentDirectory(TString Value);
     virtual TString GetPackageRootDirectory();
     virtual TString GetAppDataDirectory();
     virtual TString GetAppName();
