src/jdk.jpackage/unix/native/libapplauncher/PosixPlatform.h
@@ -44,8 +44,6 @@ public:
     virtual MessageResponse ShowResponseMessage(TString title,
             TString description);
 
-    virtual void SetCurrentDirectory(TString Value);
-
     virtual Module LoadLibrary(TString FileName);
     virtual void FreeLibrary(Module AModule);
     virtual Procedure GetProcAddress(Module AModule, std::string MethodName);
